<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zakariyaf.DevLog.ProjectActivity"
    tools:showIn="@layout/activity_project">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:max="3"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Spinner
        android:id="@+id/spinner_courses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_project_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="0dp"
        android:ems="10"
        android:hint="@string/project_title_hint"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="@id/spinner_courses"
        app:layout_constraintRight_toRightOf="@id/spinner_courses"
        app:layout_constraintTop_toBottomOf="@id/spinner_courses" />

    <EditText
        android:id="@+id/text_project_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="0dp"
        android:ems="10"
        android:hint="@string/project_text_hint"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="@id/text_project_title"
        app:layout_constraintRight_toRightOf="@id/text_project_title"
        app:layout_constraintTop_toBottomOf="@id/text_project_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/reminder_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_popup_reminder" />
</androidx.constraintlayout.widget.ConstraintLayout>
